Background height was breaking on mobile: .custom-bg height was set to auto and caused a rendering issue with our bg-image

--- a/src/styling/styles.css
+++ b/src/styling/styles.css
@@ -104,7 +104,6 @@
   }
 
   .custom-bg {
-    height: auto;
     padding-bottom: 2%;
   }
 }
